--- a/vs/2013/win-dshow/win-dshow.vcxproj
+++ b/vs/2013/win-dshow/win-dshow.vcxproj
@@ -107,7 +107,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;WINDSHOW_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../../../libobs</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4127;4201;4152;4706;4204</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4127;4201;4152;4706;4204;4244;4245;4221;4054</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -127,7 +127,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;_USRDLL;WINDSHOW_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../../../libobs</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4127;4201;4152;4706;4204</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4127;4201;4152;4706;4204;4244;4245;4221;4054</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -149,7 +149,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;WINDSHOW_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../../../libobs</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4127;4201;4152;4706;4204</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4127;4201;4152;4706;4204;4244;4245;4221;4054</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -173,7 +173,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;_USRDLL;WINDSHOW_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>../../../libobs</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4127;4201;4152;4706;4204</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4127;4201;4152;4706;4204;4244;4245;4221;4054</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
