--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -57,6 +57,7 @@ set(obs_SOURCES
 	window-basic-settings.cpp
 	window-basic-properties.cpp
 	window-basic-source-select.cpp
+	window-license-agreement.cpp
 	window-basic-status-bar.cpp
 	window-basic-transform.cpp
 	window-basic-preview.cpp
@@ -74,6 +75,7 @@ set(obs_HEADERS
 	window-basic-settings.hpp
 	window-basic-properties.hpp
 	window-basic-source-select.hpp
+	window-license-agreement.hpp
 	window-basic-status-bar.hpp
 	window-basic-transform.hpp
 	window-basic-preview.hpp
@@ -87,6 +89,7 @@ set(obs_HEADERS
 
 set(obs_UI
 	forms/NameDialog.ui
+	forms/OBSLicenseAgreement.ui
 	forms/OBSLogReply.ui
 	forms/OBSBasic.ui
 	forms/OBSBasicTransform.ui
