--- a/libobs/obsconfig.h.in
+++ b/libobs/obsconfig.h.in
@@ -2,4 +2,5 @@
 #pragma once
 
 #define OBS_VERSION "@OBS_VERSION@"
-
+#define OBS_DATA_PATH "@OBS_DATA_PATH@"
+#define OBS_INSTALL_PREFIX "@OBS_INSTALL_PREFIX@"
