Add relative plugin dest obsconfig.h define

--- a/libobs/obsconfig.h.in
+++ b/libobs/obsconfig.h.in
@@ -4,3 +4,4 @@
 #define OBS_VERSION "@OBS_VERSION@"
 #define OBS_DATA_PATH "@OBS_DATA_PATH@"
 #define OBS_INSTALL_PREFIX "@OBS_INSTALL_PREFIX@"
+#define OBS_RELATIVE_PLUGIN_DEST "@OBS_RELATIVE_PLUGIN_DEST@"
