--- a/libobs/obsconfig.h.in
+++ b/libobs/obsconfig.h.in
@@ -4,4 +4,5 @@
 #define OBS_VERSION "@OBS_VERSION@"
 #define OBS_DATA_PATH "@OBS_DATA_PATH@"
 #define OBS_INSTALL_PREFIX "@OBS_INSTALL_PREFIX@"
-#define OBS_RELATIVE_PLUGIN_DEST "@OBS_RELATIVE_PLUGIN_DEST@"
+#define OBS_PLUGIN_DESTINATION "@OBS_PLUGIN_DESTINATION@"
+#define OBS_RELATIVE_PREFIX "@OBS_RELATIVE_PREFIX@"
