Install desktop file and application icon on linux

--- a/obs/CMakeLists.txt
+++ b/obs/CMakeLists.txt
@@ -129,3 +129,9 @@ target_link_libraries(obs
 
 install_obs_core(obs)
 install_obs_data(obs data obs-studio)
+
+if (UNIX AND UNIX_STRUCTURE AND NOT APPLE)
+	install(FILES dist/obs.desktop DESTINATION share/applications)
+	install(FILES forms/images/obs.png
+		DESTINATION share/icons/hicolor/256x256/apps)
+endif()
